WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64653
DFG speculative JIT has dead code for slow calls for branches
https://bugs.webkit.org/show_bug.cgi?id=64653
Summary
DFG speculative JIT has dead code for slow calls for branches
Filip Pizlo
Reported
2011-07-16 13:17:04 PDT
http://trac.webkit.org/changeset/91099
changed how DFG handles branches, but neglected to remove dead code for the old way that branches were handled by the DFG speculative JIT. Specifically, the SpeculativeJIT::compilePeepHoleCall method is no longer called from anywhere, and is unlikely to ever be needed again since JITCodeGenerator now contains a more optimized version of that method.
Attachments
the patch
(3.09 KB, patch)
2011-07-16 13:19 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-07-16 13:19:36 PDT
Created
attachment 101097
[details]
the patch
WebKit Review Bot
Comment 2
2011-07-16 16:14:22 PDT
Comment on
attachment 101097
[details]
the patch Clearing flags on attachment: 101097 Committed
r91156
: <
http://trac.webkit.org/changeset/91156
>
WebKit Review Bot
Comment 3
2011-07-16 16:14:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug