DFG speculative JIT has dead code for slow calls for branches. https://bugs.webkit.org/show_bug.cgi?id=64653

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-16
Reviewed by Gavin Barraclough.

Removed SpeculativeJIT::compilePeepHoleCall.

* dfg/DFGSpeculativeJIT.cpp:
* dfg/DFGSpeculativeJIT.h:

Canonical link: https://commits.webkit.org/80407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91156 268f45cc-cd09-0410-ab3c-d52691b4dbfc